text spacing fixed

--- a/NewStyle.css
+++ b/NewStyle.css
@@ -2,34 +2,33 @@
     position:relative;
     top:-600px;
     right:-25px;
-    font-size: 875%;
+    font-size: 300%;
     color: rgb(5, 5, 5);
     display: inline-block;
      
   }
   .name {
+      /* text-align: justify; */
     display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 #A{
-position:relative;
-top: -500px;
-}
+    position:relative;
+    top: -500px;
+        }
 #R{
     position:relative;
     top: -400px;
-    
-    }
- #L{
-        position:relative;
-        top: -300px;
-        
         }
-        #Y{
-            position:relative;
-            top: -200px;
-            
-            }
+ #L{
+    position:relative;
+    top: -300px;
+        }
+ #Y{
+     position:relative;
+    top: -200px;
+        }
+
 .lou1 {
     position: relative;
     top: -780px;
